# simpleicons-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml
src/: constants.rs  constrants.rs  files.rs  lib.rs  main.rs  simple_icons.rs  types.rs  versions.rs
tests/: test.rs
