[package]
name = "simpleicons-rs-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
flate2 = "1.1.9"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
tar = "0.4.45"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.25.11+spec-1.1.0"
