[package]
name = "simpleicons-rs"
version = "0.0.0"
edition = "2024"
description = "SVG icons for popular brands"
readme = "README.md"
repository = "https://github.com/cscnk52/simpleicons-rs"
license = "MIT AND CC0-1.0"
keywords = ["icons", "simple-icons", "static", "svg"]
categories = ["graphics", "web-programming"]
include = ["Cargo.toml", "README.md", "build.rs", "src/icons.rs", "src/lib.rs"]

[lib]
crate-type = ["rlib"]
name = "simpleicons_rs"
path = "src/lib.rs"

[dependencies]
csscolorparser = "0.8.3"

[build-dependencies]
flate2 = "1.1.9"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
tar = "0.4.46"
thiserror = "1.0.69"
toml_edit = "0.25.11"
